www.flipkart.com - Slideshow gallery does not work correctly, only the first 2 slides are displayed
Categories
(Core :: Layout: Scrolling and Overflow, defect, P1)
Tracking
()
People
(Reporter: ctanase, Assigned: hiro)
References
(Regression, )
Details
(Keywords: regression, webcompat:platform-bug, webcompat:site-report, Whiteboard: [webcompat-source:web-bugs][webcompat:sightline], [wptsync upstream])
User Story
platform:windows,mac,linux,android impact:content-missing configuration:general affects:all branch:release diagnosis-team:layout user-impact-score:600
Attachments
(2 files)
Environment:
Operating system: Windows 10
Firefox version: Firefox 134.0/135/137
Steps to reproduce:
- Go to https://www.flipkart.com/
- Try watching the slides on the slideshow gallery (below the header), click on the next arrow ">" to navigate the gallery.
Expected Behavior:
All the slides can be accessed.
Actual Behavior:
When trying to see the 3rd slide, it will return to the first one.
Notes:
- Reproduces regardless of the status of ETP
- Reproduces in firefox-nightly, and firefox-release
- Does not reproduce in chrome
Created from https://github.com/webcompat/web-bugs/issues/147762
| Reporter | ||
Comment 1•1 year ago
|
||
| Reporter | ||
Updated•1 year ago
|
Comment 2•1 year ago
|
||
Since nightly and release are affected, beta will likely be affected too.
For more information, please visit BugBot documentation.
Updated•1 year ago
|
Comment 3•1 year ago
|
||
Comment 4•1 year ago
|
||
:hiro, since you are the author of the regressor, bug 1530253, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 5•1 year ago
|
||
I haven't looked though, it may be a case of this spec resolution (bug 1942692).
| Assignee | ||
Updated•1 year ago
|
Updated•1 year ago
|
| Assignee | ||
Comment 6•1 year ago
|
||
I am still in the middle of diagnosis, but one of the culprits is the indicator which is positioned below the slideshow. It's animated by changing styles (width?), and it causes reflows of the scroll container, and the reflow of the scroll container re-evaluate snap position.
I guess on Chrome the style change on the indicator doesn't reflow the scroll container.
Updated•1 year ago
|
| Assignee | ||
Comment 7•1 year ago
|
||
In the case of overflow:hidden scroll container, async scroll
operations are handled on the main-thread. And the scroll snap target ids
are also maintained on the main-thread either by mAsyncSmoothMSDScroll
or mAsyncScroll. But when re-using an existing mAsyncSmoothMSDScroll
instance (or mAsyncScroll), the first scroll snap target ids had persisted
in the instance, that resulted unexpected re-snapping.
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
Updated•1 year ago
|
Updated•1 year ago
|
Comment 10•1 year ago
|
||
| bugherder | ||
Comment 12•1 year ago
|
||
The patch landed in nightly and beta is affected.
:hiro, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox137towontfix.
For more information, please visit BugBot documentation.
Comment 13•1 year ago
|
||
This still reproduces using the RC Build
Tested with:
Browser / Version: Firefox 137.0-candidate build 1
Operating System: Windows 10 PRO x64
Updated•1 year ago
|
Comment 14•1 year ago
|
||
(In reply to Raul Bucata from comment #13)
This still reproduces using the RC Build
Browser / Version: Firefox 137.0-candidate build 1
It looks like this didn't get uplifted to 137, so I think that's expected.
Could you test 138 and confirm whether that's fixed there?
Comment 15•1 year ago
|
||
(It looks like we've still got an open question on whether it's worth uplifting this -- hiro, did you have a leaning there? Without knowing much of the details, my assumption is that we should just let this ride the trains as part of v138 at this point (and not uplift), since 137 gets released in less than a week, and since we've been living with this bug for years so there's presumably no pressing need to get a fix out to release users in 1 week vs. ~5 weeks.)
Comment 16•1 year ago
|
||
(I'm also reclassifying to Layout:Scrolling-and-Overflow since we had a platform change land directly on this bug, and I think that's the webcompat team's recommended process for cases where we do that -- with webcompat:platform-bug and webcompat:site-report keywords to keep it properly tracked as being a site-report-caused-by-a-platform-bug. And reverting the keyword/reopening from comment 13 since per comment 14 I think that was just a misunderstanding about which version had the fix.)
| Assignee | ||
Comment 17•1 year ago
|
||
Thanks Daniel. I has somehow missed the need-info here. I'd let this change ride on the train.
Comment 19•1 year ago
|
||
Verified as FIXED using the RC Build
Tested with:
Browser / Version: Firefox 138.0-candidate build 1
Operating System: Windows 10 PRO x64
Updated•1 year ago
|
Updated•1 year ago
|
Description
•