Bug 1946375 - Update scroll snap target ids when re-using an AsyncSmoothMSDScroll or an AsyncScroll instance. r=dlrobertson

In the case of `overflow:hidden` scroll container, async scroll
operations are handled on the main-thread. And the scroll snap target ids
are also maintained on the main-thread either by mAsyncSmoothMSDScroll
or mAsyncScroll. But when re-using an existing mAsyncSmoothMSDScroll
instance (or mAsyncScroll), the first scroll snap target ids had persisted
in the instance, that resulted unexpected re-snapping.

Differential Revision: https://phabricator.services.mozilla.com/D238731